--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grayliquid/october-theme"
+  },
   "contributes": {
     "themes": [
       {
